# nixl

./: meson_options.txt
.github/workflows/: aws_s3_validation.yml
.gitlab/: build.sh  test_plugins.sh
src/: meson.build
src/api/cpp/: nixl.h  nixl_types.h
src/core/: agent_data.h  nixl_agent.cpp
src/infra/: nixl_memory_section.cpp
src/plugins/: meson.build
src/torch-integration/: GETTING_STARTED.md  IMPLEMENTATION_NOTES.md  README.md  SUMMARY.md  example_nixl_torch.py  meson.build  nixl_backend.cpp  nixl_backend.h  nixl_torch_bindings.cpp  nixl_worker.cu  nixl_worker.h  test_backend_registration.py
test/gtest/: agent.cpp  common.cpp  common.h  main.cpp  meson.build  multi_threading.cpp  plugin_manager.cpp
test/gtest/mocks/: gmock_engine.cpp  gmock_engine.h  meson.build  mock_backend_engine.cpp  mock_backend_engine.h  mock_backend_plugin.cpp  mock_basic_plugin.cpp  mock_dram_engine.cpp  mock_dram_engine.h  mock_dram_plugin.cpp
test/gtest/plugins/: memory_handler.cpp  memory_handler.h  meson.build  obj_plugin.cpp  plugins_common.cpp  plugins_common.h  transfer_handler.cpp  transfer_handler.h
test/gtest/unit/agent/: agent.cpp
test/nixl/: test_plugin.cpp
